# PolyNER

./: LICENSE  MANIFEST.in  Makefile  README.md  polyner-demo-notebook.ipynb  pyproject.toml  setup.py
examples/: custom_entity_recognition.py  multilingual_analysis.py  multilingual_tests.ipynb
polyner/: __init__.py  core.py  emoji_handling.py  entity_recognition.py  language_detection.py  tokenization.py  utils.py
tests/: test__init__.py  test_advanced.py  test_basic.py  test_core.py  test_emoji_handling.py  test_entity_recognition.py  test_tokenization.py  test_utils.py
