[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyner"
version = "0.1.0"
description = "A multilingual NER library that handles text, emojis, and multiple languages"
readme = "README.md"
authors = [
    {name = "PolyNER Team", email = "example@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.0.0",
    "langdetect>=1.0.7",
    "emoji>=1.2.0",
    "spacy>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "flake8>=4.0.0",
    "mypy>=0.9.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "build>=0.8.0",
    "twine>=4.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/example/polyner/issues"
"Source Code" = "https://github.com/example/polyner"